# jsco

./: .browserslistrc  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: CI.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: bcd.rs  download.rs  feature.rs  lib.rs  report.rs
crates/node/: Cargo.toml  README.md  cli.js  index.d.ts  index.js  package.json  pnpm-lock.yaml
crates/node/__test__/: index.spec.mjs
crates/node/npm/darwin-arm64/: README.md  package.json
crates/node/npm/darwin-x64/: README.md  package.json
crates/node/npm/linux-arm64-gnu/: README.md  package.json
crates/node/npm/linux-x64-gnu/: README.md  package.json
crates/node/npm/win32-x64-msvc/: README.md  package.json
crates/node/src/: lib.rs
