[workspace]
members = ["crates/core", "crates/cli", "crates/node"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = []
description = "JavaScript Compatibility Oracle"
license = "MIT"

[workspace.dependencies]
oxc = "0.46.0"
oxc_semantic = "0.46.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.26", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.8"
futures-util = "0.3"
md5 = "0.7"
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "serde-json",
    "async",
] }
napi-derive = "2.12.2"
url = "2.5"
once_cell = "1.19"
chrono = "0.4"
jsco = { path = "crates/core" }
jsco_cli = { path = "crates/cli" }
glob = "0.3.1"
console = "0.15.8"
indicatif = "0.17.8"

[profile.release]
lto = true
strip = "symbols"
